[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "pictureshow"
version = "0.9.0"
description = "Save pictures to PDF."
authors = ["Michal Porteš <michalportes1@gmail.com>"]
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/mportesdev/pictureshow"
classifiers = [
    "Development Status :: 4 - Beta",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = "^3.8"
pillow = "^10.0.1"
reportlab = "^4"

[tool.poetry.scripts]
pictureshow = "pictureshow.cli:main"
