[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "pictureshow"
version = "0.10.1"
description = "Save pictures to PDF."
authors = ["Michal Porteš <michalportes1@gmail.com>"]
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/mportesdev/pictureshow"
classifiers = [
    "Development Status :: 4 - Beta",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
packages = [
    { include = "pictureshow", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.8"
pillow = "^10.0.1"
reportlab = "^4"

[tool.poetry.scripts]
pictureshow = "pictureshow.cli:main"

[tool.pytest.ini_options]
addopts = "-ra --numprocesses=auto"
xfail_strict = true

[tool.coverage.run]
branch = true
source = ["pictureshow"]

[tool.coverage.report]
show_missing = true

[tool.bandit.assert_used]
skips = ["tests/*"]
