[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "pictureshow"
version = "0.13.0"
description = "Save pictures to PDF."
authors = ["Michal Porteš <michalportes1@gmail.com>"]
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/mportesdev/pictureshow"
classifiers = [
    "Development Status :: 4 - Beta",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
packages = [
    { include = "pictureshow", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.9"
pillow = "^11"
platformdirs = "^4"
reportlab = "^4"

[tool.poetry.scripts]
pictureshow = "pictureshow.cli:main"

[tool.poetry.group.develop]
optional = true

[tool.poetry.group.develop.dependencies]
pytest = "^8"
pytest-mock = "^3"
pytest-xdist = "^3"
pypdf = "^5"

[tool.pytest.ini_options]
addopts = "-ra --numprocesses=auto"
xfail_strict = true

[tool.coverage.run]
branch = true
source = ["pictureshow"]

[tool.coverage.report]
show_missing = true

[tool.bandit.assert_used]
skips = ["tests/*"]

[tool.scriv]
format = "md"
md_header_level = "2"
version = "literal: pyproject.toml: tool.poetry.version"
